@@ -576,10 +576,16 @@ sub create_init_h {
 // This file has been automatically generated by 'rha_config.pl'.
 // Instead edit 'rha_config.d'.
 
+#ifndef RHA_INIT_H
+#define RHA_INIT_H
+
 // (1) includes
 $init_h_modules
 // (2) 'rha_init' creates the whole object hierarchy
 extern any_t rha_init(void);
+
+#endif
+
 ENDE
 }
 
